cloud/k8s-dev/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: isil.dev
      http:
        paths:
          - pathType: Prefix
            path: "/api/library/?(.*)"
            backend:
              service:
                name: library-srv
                port:
                  number: 3000
